[editor/canvas Ports] Fix select dropdown to be visible.

--- a/app/src/editor/canvas/components/Ports/Value/Select/select.pcss
+++ b/app/src/editor/canvas/components/Ports/Value/Select/select.pcss
@@ -20,6 +20,7 @@
   padding: 0 calc(0.5 * var(--um));
   transition: 200ms linear;
   transition-property: background-color, color, box-shadow;
+  width: auto;
 }
 
 .root select:hover,
